--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,8 +7,11 @@
 </head>
 
 <body>
-    <h1>{{title}}</h1>
-    <p>{{message}}</p>
+    {{>header}}
+
+    <img src="/img/robot.png">
+
+    {{>footer}}
 </body>
 
 </html>
