--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -1,9 +1,35 @@
-h1
+body
 {
-    color: grey;
+    color: #333333; /* Color code in Hexadecimal */
+    font-family: arial; /* Actual style to the characters */
+    max-width: 650px; /* Able to set max width of the site */
+    margin: 0 auto; /* Spacing property - space outside the box */
+    padding: 0 16px; /* Spacing property - space inside the box */
 }
 
-img
+footer
 {
-    width: 250px;
+    color: #888888;
+    border-top: 1px solid #eeeeee; /* width, type of border (dashed or solid), colorcode */
+    margin-top: 16px;
+    padding: 16px 0;
+}
+
+header
+{
+    margin-top: 16px;
+    margin-bottom: 48px;
+}
+
+h1
+{
+    font-size: 64px;
+    margin-bottom: 16px;
+}
+
+header a
+{
+    color: #888888;
+    margin-right: 16px;
+    text-decoration: none;
 }
