--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,6 +5,15 @@ body
     max-width: 650px; /* Able to set max width of the site */
     margin: 0 auto; /* Spacing property - space outside the box */
     padding: 0 16px; /* Spacing property - space inside the box */
+
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* viewport height of page */
+}
+
+.main-content
+{
+    flex-grow: 1;
 }
 
 footer
@@ -32,4 +41,9 @@ header a
     color: #888888;
     margin-right: 16px;
     text-decoration: none;
+}
+
+.portrait
+{
+    width: 250px;
 }
