--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -3,13 +3,17 @@
 <html>
 
 <head>
+    <title>About</title>
+    <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
-    {{>header}}
+    <div class="main-content">
+        {{>header}}
 
-    <img src="/img/robot.png">
+        <img class="portrait" src="/img/robot.png">
+    </div>
 
     {{>footer}}
 </body>
