--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,6 +18,13 @@
 
             <button>Search</button>
         </form>
+
+        <p id="message-1">
+
+        </p>
+        <p id="message-2">
+
+        </p>
     </div>
 
     {{>footer}}
