--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -12,6 +12,8 @@
     <div class="main-content">
         {{>header}}
 
+        <p>This site was created by Dice. It uses data from mapbox.com and weatherstack.com.</p>
+
         <img class="portrait" src="/img/robot.png">
     </div>
 
